What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

September 6, 2007
* [Mathieu Malaterre] CMake: start compiling mj2, jpwl and jp3d

September 4, 2007
+ [GB] Added some fields in the codestream_info structure: they are used to record the position of single tile parts. Changed also the write_index function in the codec, to reflect the presence of this new information.
September 3, 2007
+ [GB] Added the knowledge of JPSEC SEC and INSEC markers (you have to compile the JPWL project). Management of these markers is limited to skipping them without crashing: no real security function at this stage. Deprecated USE_JPSEC will be removed next

August 31, 2007
* [GB] Fixed save capabilities in OPJViewer due to recent code upgrade

August 30, 2007
* [FOD] Changed the OpenJPEG library interface to enable users to access information regarding the codestream (also called codestream index).
		This index is usefull for all applications requiring to have a scalable acces to the codestream (like JPIP applications, ...)
        Currently, this information is only available when encoding an image.       
+ [FOD] Added the information regarding the end of packet position in the index        

August 28, 2007
* [FOD] Fixed wrong destructors called in openjpeg.c
* [FOD] Fixed bug in j2k_decode_jpt_stream

August 24, 2007
* [Parvatha] The end of main header is calculated after TLM and POC marker for Dcinema.

August 21, 2007
+ [FOD] Added support for Visual Studio 2005
* [FOD] Robustified MJ2 codecs
* [Parvatha] Solved problems with codec reading from image file directory when filename had more than one "." in name
* [Callum Lerwick] Minor cleanup patch, that gets rid of a bunch of "old style declaration" warnings from Intel's compiler
* [Callum Lerwick] Aligned malloc using Intel's _mm_malloc(). Cleanup on the t1 memory allocation, getting rid of some leftover debug code
* [Callum Lerwick] Memory leaks fixed