@@ -7,6 +7,7 @@ What's New for OpenJPEG
 
 September 6, 2007
 * [Mathieu Malaterre] CMake: start compiling mj2, jpwl and jp3d
+* [Mathieu Malaterre] CMake: output all executable/libs into one single directory
 
 September 4, 2007
 + [GB] Added some fields in the codestream_info structure: they are used to record the position of single tile parts. Changed also the write_index function in the codec, to reflect the presence of this new information.
